--- a/wiki/pyFluidSynth.wiki
+++ b/wiki/pyFluidSynth.wiki
@@ -22,6 +22,13 @@ FluidSynth works on all major platforms, so pyFluidSynth should also.
 
 FluidSynth 1.0.7 + development headers (or later version)
 (earlier versions probably work, untested)
+http://www.nongnu.org/fluid/
+
+
+== DOWNLOAD ==
+
+pyFluidSynth is available as a source distribution from PyPI.
+http://pypi.python.org/pypi/pyFluidSynth
 
 
 == INSTALLATION ==
