Edited wiki page through web user interface.

--- a/wiki/SWMixer.wiki
+++ b/wiki/SWMixer.wiki
@@ -29,6 +29,12 @@ NumPy 1.0 (or more recent)
 http://numpy.scipy.org/
 
 
+== DOWNLOAD ==
+
+A source distribution is available at PyPI:
+http://pypi.python.org/pypi/SWMixer
+
+
 == INSTALLATION ==
 
 SWMixer is packaged as Python source using distutils.  To install,
