--- a/trunk/pyfluidsynth/README
+++ b/trunk/pyfluidsynth/README
@@ -19,9 +19,12 @@ FluidSynth works on all major platforms, so pyFluidSynth should also.
 
 REQUIREMENTS
 
-FluidSynth 1.0.7 + development headers (or later version)
+FluidSynth 1.0.7 (or later version)
 (earlier versions probably work, untested)
 http://www.nongnu.org/fluid/
+
+NumPy 1.0 or later
+http://numpy.scipy.org/
 
 
 DOWNLOAD
@@ -32,7 +35,7 @@ http://pypi.python.org/pypi/pyFluidSynth
 
 INSTALLATION
 
-pyFluidSynth is packaged as C source using distutils.  To install,
+pyFluidSynth is packaged as Python source using distutils.  To install,
 run the following command as root:
 
 python setup.py install
@@ -40,49 +43,46 @@ python setup.py install
 For more information and options about using distutils, read:
 http://docs.python.org/inst/inst.html
 
-For help with compiler flags in case C compiling is not working:
-http://docs.python.org/inst/tweak-flags.html
-
 
 EXAMPLE
 
 Here is a program that plays a chord for a second.
 
 --
-import pyfluidsynth as fl
 import time
+import fluidsynth
 
-fl.init()
-fl.start()
+fs = fluidsynth.Synth()
+fs.start()
 
-sf = fl.sfload("example.sf2")
-fl.program_select(0, sf, 0, 0)
+sfid = fs.sfload("example.sf2")
+fs.program_select(0, sfid, 0, 0)
 
-fl.noteon(0, 60, 30)
-fl.noteon(0, 67, 30)
-fl.noteon(0, 76, 30)
-
-time.sleep(1.0)
-
-fl.noteoff(0, 60)
-fl.noteoff(0, 67)
-fl.noteoff(0, 76)
+fs.noteon(0, 60, 30)
+fs.noteon(0, 67, 30)
+fs.noteon(0, 76, 30)
 
 time.sleep(1.0)
 
-fl.stop()
+fs.noteoff(0, 60)
+fs.noteoff(0, 67)
+fs.noteoff(0, 76)
+
+time.sleep(1.0)
+
+fs.delete()
 --
 
-The init() command initializes the FluidSynth synthesizer data.
-The start() command starts audio output in a separate thread.
+First a Synth object is created to control playback.
+The start() method starts audio output in a separate thread.
 
 To get sound, you need to choose an instrument.  First load a
 SoundFont with sfload(), then select a bank and preset with
 program_select().
 
-  program_select(track, soundfont, banknum, presetnum)
+  program_select(track, soundfontid, banknum, presetnum)
 
-To start a note, use noteon().
+To start a note, use the noteon() method.
 
   noteon(track, midinum, velocity)
 
@@ -96,22 +96,30 @@ MANAGING AUDIO
 You can also manage audio IO yourself and just use FluidSynth to
 calculate the samples for the music.  You might do this, for example,
 in a game with WAV sound effects and algorithmically generated music.
-To do this, call init() but don't call start().  To generate the next
-chunk of audio, call write_s16().
+To do this, create the Synth object but don't call start().  To
+generate the next chunk of audio, call get_samples().
 
-  write_s16(len)
+  get_samples(len)
 
-The length you pass will be the number of frames of audio.  Each frame
-is 2 bytes per channel * 2 channels.  Unless specified otherwise,
-FluidSynth assumes an output rate of 44100 Hz.
+The length you pass will be the number of audio samples. Unless
+specified otherwise, FluidSynth assumes an output rate of 44100 Hz.
+The return value will be a Numpy array of samples.  By default
+FluidSynth generates stereo sound, so the return array will be
+length 2 * len.
+
+To join arrays together, use numpy.append().
+
+To convert an array of samples into a string of bytes suitable for sending
+to the soundcard, use fluidsynth.raw_audio_string(samples).
 
 Here is an example that generates a chord then plays the data using
 PyAudio.
 
 --
-import pyfluidsynth as fl
 import time
+import numpy
 import pyaudio
+import fluidsynth
 
 pa = pyaudio.PyAudio()
 strm = pa.open(
@@ -122,33 +130,34 @@ strm = pa.open(
 
 s = []
 
-fl.init()
+fl = fluidsynth.Synth()
 
 # Initial silence is 1 second
-s.append(fl.write_s16(44100 * 1))
+s = numpy.append(s, fl.get_samples(44100 * 1))
 
-sf = fl.sfload("example.sf2")
-fl.program_select(0, sf, 0, 0)
+sfid = fl.sfload("example.sf2")
+fl.program_select(0, sfid, 0, 0)
 
 fl.noteon(0, 60, 30)
 fl.noteon(0, 67, 30)
 fl.noteon(0, 76, 30)
 
 # Chord is held for 2 seconds
-s.append(fl.write_s16(44100 * 2))
+s = numpy.append(s, fl.get_samples(44100 * 2))
 
 fl.noteoff(0, 60)
 fl.noteoff(0, 67)
 fl.noteoff(0, 76)
 
 # Decay of chord is held for 1 second
-s.append(fl.write_s16(44100 * 1))
+s = numpy.append(s, fl.get_samples(44100 * 1))
 
-fl.stop()
+fl.delete()
 
-samps = ''.join(s)
+samps = fluidsynth.raw_audio_string(s)
 
 print len(samps)
+print 'Starting playback'
 strm.write(samps)
 --
 
@@ -156,8 +165,6 @@ strm.write(samps)
 BUGS AND LIMITATIONS
 
 Not all functions in FluidSynth are bound.
-
-Interface does not support multiple FluidSynth synthesizers at once.
 
 Not much error checking, FluidSynth will segfault/crash if you call
 the functions incorrectly sometimes.
