--- a/pyfluidsynth/README
+++ b/pyfluidsynth/README
@@ -1,7 +1,6 @@
+=pyFluidSynth=
 
-pyFluidSynth
-
-Python bindings for FluidSynth
+==Python bindings for FluidSynth==
 
 Copyright 2008, Nathan Whitehead <nwhitehe@gmail.com>
 Released under the LGPL
@@ -17,7 +16,7 @@ chunks of audio data and output the data to the soundcard yourself.
 FluidSynth works on all major platforms, so pyFluidSynth should also.
 
 
-REQUIREMENTS
+==REQUIREMENTS==
 
 FluidSynth 1.0.7 (or later version)
 (earlier versions probably work, untested)
@@ -27,13 +26,13 @@ NumPy 1.0 or later
 http://numpy.scipy.org/
 
 
-DOWNLOAD
+==DOWNLOAD==
 
 pyFluidSynth is available as a source distribution from PyPI.
 http://pypi.python.org/pypi/pyFluidSynth
 
 
-INSTALLATION
+==INSTALLATION==
 
 pyFluidSynth is packaged as Python source using distutils.  To install,
 run the following command as root:
@@ -44,11 +43,11 @@ For more information and options about using distutils, read:
 http://docs.python.org/inst/inst.html
 
 
-EXAMPLE
+==EXAMPLE==
 
 Here is a program that plays a chord for a second.
 
---
+{{{
 import time
 import fluidsynth
 
@@ -71,7 +70,7 @@ fs.noteoff(0, 76)
 time.sleep(1.0)
 
 fs.delete()
---
+}}}
 
 First a Synth object is created to control playback.
 The start() method starts audio output in a separate thread.
@@ -91,7 +90,7 @@ To stop a note, use noteoff().
   noteoff(track, midinum)
 
 
-MANAGING AUDIO
+==MANAGING AUDIO==
 
 You can also manage audio IO yourself and just use FluidSynth to
 calculate the samples for the music.  You might do this, for example,
@@ -115,7 +114,7 @@ to the soundcard, use fluidsynth.raw_audio_string(samples).
 Here is an example that generates a chord then plays the data using
 PyAudio.
 
---
+{{{
 import time
 import numpy
 import pyaudio
@@ -159,10 +158,10 @@ samps = fluidsynth.raw_audio_string(s)
 print len(samps)
 print 'Starting playback'
 strm.write(samps)
---
+}}}
 
 
-BUGS AND LIMITATIONS
+==BUGS AND LIMITATIONS==
 
 Not all functions in FluidSynth are bound.
 
