--- a/swmixer/README
+++ b/swmixer/README
@@ -7,13 +7,13 @@ Released under the LGPL
 
 This module implements a realtime sound mixer suitable for use in
 games or other audio applications.  It supports loading sounds in
-uncompressed WAV format.  It can mix several sounds together during
-playback.  The volume and position of each sound can be finely
-controlled.  Samples can also be looped any number of times.  Looping
-is accurate down to a single sample, so well designed loops will play
-seamlessly without clicks or pops.  In addition, the mixer supports
-audio input during playback (if supported in pyaudio with your sound
-card).
+uncompressed WAV format and also MP3 format.  It can mix several
+sounds together during playback.  The volume and position of each
+sound can be finely controlled.  Sounds are automatically resampled
+and stereo converted for correct playback.  Samples can also be looped
+any number of times.  Longer sounds can be streamed from a file to
+save memory.  In addition, the mixer supports audio input during
+playback (if supported in pyaudio with your sound card).
 
 
 ==REQUIREMENTS==
@@ -23,6 +23,15 @@ http://people.csail.mit.edu/hubert/pyaudio/
 
 NumPy 1.0 (or more recent)
 http://numpy.scipy.org/
+
+
+Optional for MP3 support:
+
+MPEG Audio Decoder (MAD)
+http://www.underbit.com/products/mad/
+
+PyMAD bindings for MAD
+http://spacepants.org/src/pymad/
 
 
 ==DOWNLOAD==
@@ -90,6 +99,44 @@ time.sleep(1.0)
 }}}
 
 
+==STREAMING==
+
+Normally sounds are loaded entirely into memory before playback
+begins.  For long sounds this might result in too much memory being
+wasted.  The solution is to create a StreamingSound object.
+
+The interface for StreamingSounds is almost identical to regular
+Sounds, but there are some limitations.  Most importantly, the
+streaming sound must already be in the correct format for playing.
+The samplerate of the streaming sound must match the output
+samplerate.  If the output is stereo then the streaming sound must be
+stereo.  If the streaming sound is an MP3 then the output must be
+stereo.
+
+Here's a very simple example showing a streaming sound along with a
+regular sound.
+{{{
+import swmixer
+import time
+
+swmixer.init(samplerate=44100, chunksize=1024, stereo=True)
+swmixer.start()
+snd1 = swmixer.StreamingSound("Beat_77.mp3")
+snd2 = swmixer.Sound("test2.wav")
+snd1.play(volume=0.2)
+snd2.play()
+time.sleep(10.0) #don't quit before we hear the sound!
+}}}
+
+StreamingSounds have most of the functionality of regular Sounds, but
+some operations are not allowed.  For example, WAV streams do not
+allow arbitrary jumping to a position; MP3 streams do.  MP3 streams
+allow checking the total length with get_length(), while WAV streams
+do not.  (However WAV Sounds do have get_length()).
+
+You can have any number of StreamingSounds and Sounds playing at once.
+
+
 ==EXPLICIT TICK INTERFACE==
 
 Instead of calling swmixer.start() you may also call swmixer.tick() every
@@ -138,7 +185,10 @@ while True:
 
 You can also call swmixer.set_buffersize(size) at any time to change
 the buffer size and thus change the framerate.  Switching the buffer
-size to 512 will double the framerate.
+size to 512 will double the framerate.  SWMixer does not impose any
+requirements on the buffer size, it can be anything.  As the buffer
+size gets smaller you will have to call swmixer.tick() very quickly
+to avoid audio glitches.
 
 
 ==RECORDING==
@@ -194,11 +244,12 @@ You may want to do this for the following reasons:
   * more control over precise sample positioning
   * automatic resampling of loaded WAV files to correct playback speed
   * support for simultaneous audio input
+  * allow multiple streams of audio at once
 
 To use swmixer with pygame, it is best to initialize swmixer before
 initializing pygame.  You cannot start both the pygame mixer and
 swmixer at the same time.  Alternatively you can initialize pygame
-but explicitly say to not start the mixer.
+but explicitly say to not start the mixer, then initialize swmixer.
 
 There are some differences between swmixer and pygame.mixer.  The most
 important is that after initializing swmixer with swmixer.init(...),
@@ -231,3 +282,6 @@ Currently there is no way to limit the number of sounds mixed at once
 to prevent excessive CPU usage.
 
 No way to pan mono sounds to different positions in stereo output.
+
+StreamingSounds may not be sample accurate for looping and setting
+position.
