--- a/swmixer/README
+++ b/swmixer/README
@@ -51,6 +51,12 @@ For more information and options about using distutils, read:
 http://docs.python.org/inst/inst.html
 
 
+==DOCUMENTATION==
+
+This README file along with the pydoc documentation in the doc/
+directory are the documentation for SWMixer.
+
+
 ==HOW CAN IT POSSIBLY WORK IN PYTHON?==
 
 Realtime mixing of sample data is done entirely in python using the
